# polaris

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  draft.md  factory-is-the-wrong-metaphor.md  install.sh  test.md
.github/workflows/: ci.yml  release.yml
apple/: README.md  project.yml  setup.sh
apple/Polaris/: Info.plist  MarkdownDocument.swift  PolarisApp.swift  PolarisTextView.swift  PreviewView.swift  Theme.swift  WritingView.swift
apple/build-device/: info.plist
apple/build-device/ModuleCache.noindex/: Accessibility-5U7U27SSY6AG6U4AC5HOV4PMM.pcm  Accessibility-CC58OUK4TDNNW4HFX975VAR4A.pcm  CFNetwork-8YDCEHHTESA232NF4II7H7M4E.pcm  CFNetwork-A63MBZT8OBFDHCK77PQBHZHRC.pcm  CoreData-190534B44V0GK0PF0P93VZ88D.pcm  CoreData-2TQK96H9H5DGUYRH3U0SNNQDU.pcm  CoreFoundation-5RQUDKHTYYPTJ0FPNVUYD0J34.pcm  CoreFoundation-5TQ96RINZXCOIGTRIE57MZCCD.pcm  CoreGraphics-1Z5BDPUJOSWUL8FPH6KKY2NNV.pcm  CoreGraphics-DU6RHP3HKSQ8IBMIBIR7HLEWB.pcm  CoreImage-5OEKIG0AG6XTW2YHD7XMWLPPZ.pcm  CoreImage-CG33YTJV9YNI46W6C4JDPS1C0.pcm  CoreText-5IBHTGXPP887ZIJ7X3DS7F268.pcm  CoreText-80GO1924UT859B4EHYDO7T2HR.pcm  CoreTransferable-D3FLQNBIUNRT3R363YR51HWEZ.pcm  CoreTransferable-ERSV5PULOO6EILH8OYF0DBIYN.pcm  CoreVideo-8PZ8XZKD5X3DOKHRAN93UFJSY.pcm  CoreVideo-EDC5M469RMKBI54TIY2UQKDQ8.pcm  Darwin-268NBKUXQVALDUG6RUR2UC549.pcm  Darwin-817KLFSTG51XXR4QT89HVBFDJ.pcm  DataDetection-1DHNXT771C0KJU3HV7M2MA8XV.pcm  DataDetection-41PMZ1RG4KJU17USK9AVBLSXX.pcm  DeveloperToolsSupport-27S8IS5RAQ9NOIONTMWI72G2F.pcm  DeveloperToolsSupport-6A5G3C3JBL5VIQV9I7WFA250Z.pcm  Dispatch-6AH14BN42O2A92HS7IOTLF9RP.pcm  Dispatch-866MCJJW9TUO67XKPZYM665JW.pcm  FileProvider-5LDQQIY1T2XNR65ZJ35AN2E24.pcm  FileProvider-7OML6U8W1PUA6VNONKUJ71132.pcm  IOSurface-1L3MPVE7B6JBUK5LEBDMQWFW7.pcm  IOSurface-4E1199QUV8QYXDOVBE3L3XH5Q.pcm  ImageIO-89JMWCQRIWRVWUZNG8160AWA8.pcm  ImageIO-CGAECYWJR6PESJYJYEDJ836AA.pcm  MachO-19DB746MX3F4H7S6B8GETIL4.pcm  MachO-7N377PKDM372CBH9X44NG2MID.pcm  Metal-544M6KSO9AVDA2H14ZFFSH99B.pcm  Metal-D6W815LNQP0CGNEIPCLIIK035.pcm  OSLog-5D5NRAJ41BBVIOY5M3YPQRFST.pcm  OSLog-ACMUDMIQ5LZC1SGUAQCR0V5ZW.pcm  ObjectiveC-2TAX7NIUMDJ1RU2UOIR0ELB4T.pcm  ObjectiveC-6WYCLRMG0NZQJCJSDTUW8JOTZ.pcm  (+69 more)
apple/build-device/ModuleCache.noindex/3G0I33XYN6Z5D/: Accessibility-VYIYGZ1KCPTG.pcm  CFNetwork-3VZ00SBW9UDLT.pcm  CoreData-XJQ92PAYABTK.pcm  CoreFoundation-37X8IICWG4GXC.pcm  CoreGraphics-25IP4C82UPPLD.pcm  CoreImage-3L9CQQ6A7TCR0.pcm  CoreText-2W4I4866F1XUU.pcm  CoreTransferable-1FV9BTC0RO92Y.pcm  CoreVideo-Y9NN4HRX4EA6.pcm  Darwin-1OFLEA9ZNG66V.pcm  DataDetection-FPOLXKI2VN5P.pcm  DeveloperToolsSupport-36OU6Y0XAG0KU.pcm  Dispatch-1X6URTB9E8RUM.pcm  FileProvider-T774CZ3W5EC4.pcm  Foundation-2F3RS29RVO43N.pcm  IOSurface-2B2LL3EZFNKGD.pcm  ImageIO-3C4G1THIQO10A.pcm  MachO-9495KAFXRAS3.pcm  Metal-3LH43RI0LKAY2.pcm  OSLog-1KNQL9EL8FTS4.pcm  ObjectiveC-1UEBW0A0EREAA.pcm  OpenGLES-JKMY7ULN98NY.pcm  QuartzCore-Y7GOSU46RGS6.pcm  Security-214O5KQZCOW3N.pcm  Spatial-1YJJ97VK0KQQD.pcm  SwiftShims-2T96M38N78LYI.pcm  SwiftUI-25BYL3T0ZY6OS.pcm  SwiftUICore-3JB4L0XNR41M.pcm  Symbols-1ISEBPMDXMM84.pcm  UIKit-20DMB2SBYC6QF.pcm  UIUtilities-QI5IHAMY5FF5.pcm  UniformTypeIdentifiers-NIJJOGSJVL5K.pcm  UserNotifications-3LNW6BZ5467YU.pcm  XPC-1MMP28LPSD7RZ.pcm  _AvailabilityInternal-3D4U9ULTH0M7F.pcm  _Builtin_float-2OQWMRBVRD4OJ.pcm  _Builtin_intrinsics-2OQWMRBVRD4OJ.pcm  _Builtin_inttypes-2OQWMRBVRD4OJ.pcm  _Builtin_limits-2OQWMRBVRD4OJ.pcm  _Builtin_stdarg-2OQWMRBVRD4OJ.pcm  (+17 more)
apple/build-device/ModuleCache.noindex/3KW5F9Y787W1E/: Accessibility-VYIYGZ1KCPTG.pcm  CFNetwork-3VZ00SBW9UDLT.pcm  CoreData-XJQ92PAYABTK.pcm  CoreFoundation-37X8IICWG4GXC.pcm  CoreGraphics-25IP4C82UPPLD.pcm  CoreImage-3L9CQQ6A7TCR0.pcm  CoreText-2W4I4866F1XUU.pcm  CoreTransferable-1FV9BTC0RO92Y.pcm  (+49 more)
apple/build-device/SDKStatCaches.noindex/: iphoneos26.5-23F81a-32daed1954a7d5dd0789fcaf2a9bb78b.sdkstatcache
crates/polaris/: Cargo.toml
crates/polaris-core/: Cargo.toml
crates/polaris-core/src/: buffer.rs  cursor.rs  document.rs  history.rs  lib.rs  typography.rs
crates/polaris-core/tests/: document.rs
crates/polaris-drafts/: Cargo.toml
crates/polaris-drafts/src/: diff.rs  lib.rs  notes.rs  review.rs  store.rs
crates/polaris-ffi/: Cargo.toml  build-xcframework.sh
crates/polaris-ffi/src/: lib.rs  preview.rs
crates/polaris-ffi/swift/: check-host.sh  roundtrip.swift
crates/polaris-notion/: Cargo.toml
crates/polaris-notion/src/: blocks.rs  client.rs  lib.rs
crates/polaris-publish/: Cargo.toml
crates/polaris-publish/src/: html.rs  hugo.rs  lib.rs  linkedin.rs  notion.rs  substack.rs
crates/polaris/src/: main.rs  publish.rs
crates/polaris/src/cli/: mod.rs
crates/polaris/src/config/: mod.rs
crates/polaris/src/editor/: buffer.rs  ui.rs
crates/polaris/src/gui/: editor.rs  fonts.rs  mod.rs  preview.rs  spike.rs  theme.rs  welcome.rs
design/: DESIGN.md  mockup.html
docs/: AI.md  DRAFTS.md  IOS.md  PHASE4.md  PLAN.md  SPIKE-editor-widget.md
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/editor/: buffer.rs  mod.rs  ui.rs
src/notion/: blocks.rs  client.rs  mod.rs
(+109 files in other folders)
