[package]
name = "polaris"
version = "0.1.0"
edition = "2021"
authors = ["Polaris Contributors"]
description = "A local-first markdown editor with Notion deployment"
license = "MIT"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
pulldown-cmark = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
