[workspace]
resolver = "2"
members = [
    "crates/polaris-core",
    "crates/polaris-drafts",
    "crates/polaris-notion",
    "crates/polaris",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Polaris Contributors"]
license = "MIT"
repository = "https://github.com/saadatqadri/polaris"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
