[package]
name = "polaris-drafts"
description = "Writer-friendly version control for Polaris: content-addressed snapshots, no git (docs/DRAFTS.md)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
sha2 = "0.10"
similar = "2"
unicode-segmentation = "1.11"
zstd = "0.13"
