[package]
name = "polaris-notion"
description = "Markdown-to-Notion-blocks conversion and Notion API client for Polaris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
pulldown-cmark = "0.11"
reqwest = { version = "0.11", features = ["json"] }
