[package]
name = "polaris"
description = "A local-first markdown editor with Notion deployment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polaris-core = { path = "../polaris-core" }
polaris-notion = { path = "../polaris-notion" }

anyhow.workspace = true
serde.workspace = true
iced = "0.14"
dark-light = "2"
ratatui = "0.26"
crossterm = "0.27"
pulldown-cmark = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
