[package]
name = "polaris"
description = "A local-first markdown editor with Notion deployment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polaris-core = { path = "../polaris-core" }
polaris-drafts = { path = "../polaris-drafts" }
polaris-notion = { path = "../polaris-notion" }
polaris-publish = { path = "../polaris-publish" }

anyhow.workspace = true
serde.workspace = true
iced = { version = "0.14", features = ["tokio", "advanced"] }
dark-light = "2"
pulldown-cmark = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
arboard = "3"
